--- a/src/components/work/Works.css
+++ b/src/components/work/Works.css
@@ -17,8 +17,8 @@
   /* display: flex; */
   height: 80vh;
   overflow-x: scroll;
-  padding: 0 2rem;
-  margin: 0 10%;
+  /* padding: 0 2rem; */
+  margin: 0 3rem;
 }
 
 @media (min-width: 950px) {
