--- a/src/components/work/Work.css
+++ b/src/components/work/Work.css
@@ -13,9 +13,7 @@
   width: 22rem;
 }
 .img-and-sitename:hover .workimg {
-  /* transform: scale(1.2); */
-  /* opacity: 0.7; */
-  /* width: 23rem; */
+  transform: scale(1.1);
 }
 .workimg {
   width: 20rem;
