--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -1,27 +1,81 @@
 .about {
-  color: #555;
+  height: 100vh;
+  color: #aa988a;
+  font-family: "Titillium Web", sans-serif;
   position: relative;
-  /* height: 90vh; */
-}
-.about-container {
-  text-align: center;
-  margin: 0 30%;
 }
 
+.title-in-about {
+  position: absolute;
+  top: 35%;
+  left: 0;
+
+  color: #fff;
+  font-weight: 900;
+  font-size: larger;
+  letter-spacing: 3px;
+  background-color: #9dc3bc;
+
+  margin-left: 2rem;
+  padding: 2rem 5rem;
+}
+
+.about-container {
+  width: 100%;
+  height: 40%;
+  background-color: #fff;
+}
 .about-texts {
+  height: 100%;
+  max-width: 700px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 3rem 0rem 3rem 7rem;
+  background-color: #fff;
 }
-.text-head {
-  font-size: 23px;
-  letter-spacing: 2.5px;
-  margin-bottom: 1rem;
+.about h1 {
+  font-size: 2rem;
+  text-shadow: 0 0 10px rgba(255, 255, 255, 1);
+
+  font-weight: 500;
+  letter-spacing: 2px;
+  font-family: "Parisienne", cursive;
 }
+
 .text-body {
   letter-spacing: 1.5px;
   line-height: 1.4rem;
+  padding: 0.5rem;
 }
 
-@media (max-width: 950px) {
+@media (max-width: 900px) {
+  .about-texts {
+    padding: 3rem 5rem;
+  }
+}
+
+@media (min-width: 1200px) {
   .about-container {
-    margin: 0 20%;
+    padding: 0 7rem;
+  }
+  .title-in-about {
+    margin-left: 10rem;
+  }
+
+  .sideblur1,
+  .sideblur2 {
+    width: 5rem;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    background-color: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(7px);
+  }
+  .sideblur1 {
+    left: 0;
+  }
+  .sideblur2 {
+    right: 0;
   }
 }
