--- a/src/components/skills/Skills.css
+++ b/src/components/skills/Skills.css
@@ -1,28 +1,47 @@
 .skills {
-  color: #555;
-  position: relative;
-}
-.skills-container {
-  text-align: center;
-  margin: 0 10%;
+  width: 100vw;
+  min-height: 60%;
+  color: #fff;
+  background-color: #aa988a;
+
+  margin-right: 0;
+  margin-left: auto;
+  padding: 4rem 7rem 0 0;
+  text-align: right;
 }
 
-.icon-container {
-  background-color: rgba(0, 0, 0, 0.1);
-  /* background-color: rgba(126, 45, 45, 0.2); */
-  border-radius: 5px;
-}
-.icons {
-  padding: 1rem;
-  color: aliceblue;
-}
-.icon {
-  padding: 3rem;
+.skills h1 {
+  margin-right: 1.5rem;
+  font-size: 2rem;
+  text-shadow: 0 0 10px rgba(255, 255, 255, 1);
 }
 
-@media (max-width: 950px) {
-  .icon {
-    font-size: 3rem;
-    padding: 1rem;
+.skills-icons {
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: right;
+}
+.skills-icon {
+  width: 3rem;
+  height: 3rem;
+  display: inline-block;
+  margin: 1.5rem;
+}
+
+@media (max-width: 900px) {
+  .skills {
+    padding: 5rem;
+  }
+  .skills-icons {
+    justify-content: center;
+  }
+}
+
+@media (min-width: 1200px) {
+  .skills {
+    padding-right: 15rem;
   }
 }
