--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -1,16 +1,24 @@
 .contact {
+  height: 100vh;
   color: #555;
-  position: relative;
-  height: 60vh;
+  text-align: center;
 }
 .contact-container {
+  margin: auto 0;
   width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.contact h1 {
+  font-size: 2rem;
+  text-shadow: 0 0 10px rgba(255, 255, 255, 1);
 
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  font-weight: 500;
+  letter-spacing: 2px;
+  font-family: "Parisienne", cursive;
+  margin: 1rem;
 }
 
 .contact-info {
@@ -24,9 +32,8 @@
   text-decoration: none;
   color: #555;
 }
-.icons-in-contact {
+.contact-icon {
+  width: 2rem;
+  height: 2rem;
   margin: 1rem;
-}
-.icon-in-contact {
-  margin: 0.5rem;
 }
