--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,16 +1,26 @@
 .footer {
-  color: #555;
-  height: 3rem;
   width: 100vw;
-  background-color: rgba(255, 255, 255, 0.3);
+  /* color: #4a4947; */
   text-align: center;
-  position: relative;
+  background-color: rgba(255, 255, 255, 0.1);
+  z-index: 999;
+
+  position: fixed;
+  bottom: 0;
+  left: 0;
 }
 .footer p {
   font-size: 1rem;
   letter-spacing: 2px;
-  position: absolute;
-  left: 50%;
-  top: 25%;
-  transform: translateX(-50%);
+
+  height: 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@media (max-width: 900px) {
+  .footer p {
+    height: 2.5rem;
+  }
 }
