--- a/src/components/hero/Hero.css
+++ b/src/components/hero/Hero.css
@@ -1,83 +1,177 @@
-@import url("https://fonts.googleapis.com/css2?family=Dancing+Script&family=Roboto:wght@100&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Cinzel&family=Roboto:wght@100&display=swap");
-
 .hero {
-  position: sticky;
-  top: 0;
-  width: 100%;
-  height: 100vh;
-  overflow: hidden;
-}
-.bgimg-container {
-  width: 100%;
-  height: 100vh;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-image: url("../imgs/hero.jpg");
-  background-size: cover;
-  background-position: 40% 50%;
-
-  border-bottom-left-radius: -2000px -200px;
-  border-bottom-right-radius: -2000px -200px;
-}
-.bg-dark {
   width: 100vw;
   height: 100vh;
-  background: linear-gradient(
-    to right,
-    rgba(255, 255, 255, 0) 40%,
-    rgba(214, 214, 214, 0.7)
-  );
 
-  backdrop-filter: brightness(50%);
-}
-.siteTitle {
-  min-width: 25rem;
-  color: rgba(255, 255, 255, 0.7);
-  text-shadow: 0 0 7px rgba(255, 255, 255, 0.5);
-  font-family: "Parisienne", cursive;
-
-  /* font-family: "Dancing Script", cursive; */
-  /* font-family: "Cinzel", serif; */
-
-  position: absolute;
-  /* top: 45%;
-  right: 20%;
-  transform: translate(20%, -45%); */
-  top: 30%;
-  right: 20%;
-  transform: translate(20%, -30%);
-}
-.hero-name {
-  font-size: 4rem;
-  font-weight: 400;
-  letter-spacing: 5px;
+  display: flex;
+  flex-wrap: wrap;
   text-align: center;
-}
-.hero-sub {
-  font-size: 1.5rem;
-  font-weight: 400;
-  letter-spacing: 3px;
-  text-align: center;
+  font-family: "Titillium Web", sans-serif;
 }
 
-.links {
-  position: absolute;
-  bottom: 10%;
-  right: 20%;
-  transform: translate(20%, 10%);
+.hero1,
+.hero2,
+.hero3,
+.hero4 {
+  width: 50%;
+  height: 50%;
+  transition: 1s;
 }
-
-.link {
-  width: 20rem;
-  text-align: center;
-  background-color: rgba(0, 0, 0, 0.3);
-  border-radius: 50px;
-  margin: 1rem;
-  padding: 1rem;
-  color: rgba(255, 255, 255, 0.7);
-  text-shadow: 0 0 7px rgb(255 255 255 / 50%);
+.hero3,
+.hero4 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.hero-link {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #4a4947;
   font-size: 2rem;
+  transition: 1s;
+
+  position: relative;
+}
+
+.hero1 {
+  background-color: #faf7f0;
+}
+.hero2 {
+  background-color: #d8d2c2;
+}
+
+.hero1 .hero-link:hover,
+.hero2 .hero-link:hover {
+  padding-right: 5rem;
+}
+.hover-icon {
+  position: absolute;
+  top: 50%;
+  right: 30%;
+  transform: translate(-30%, -50%);
+  opacity: 0;
+}
+.hover-icon2 {
+  position: absolute;
+  top: 50%;
+  right: 25%;
+  transform: translate(-25%, -50%);
+  opacity: 0;
+}
+.hover-icon3 {
+  position: absolute;
+  top: 50%;
+  right: 20%;
+  transform: translate(-20%, -50%);
+  opacity: 0;
+}
+.hero1 .hero-link:hover .hover-icon,
+.hero2 .hero-link:hover .hover-icon {
+  opacity: 1;
+  transition: 0.5s;
+}
+.hero1 .hero-link:hover .hover-icon2,
+.hero2 .hero-link:hover .hover-icon2 {
+  opacity: 1;
+  transition: 1.5s;
+}
+.hero1 .hero-link:hover .hover-icon3,
+.hero2 .hero-link:hover .hover-icon3 {
+  opacity: 1;
+  transition: 2.5s;
+}
+
+.hero3 {
+  background-color: #b17457;
+}
+.hero-contact-container,
+.hero-contact-icon {
+  color: #4a4947;
+}
+.hero4 {
+  background-color: #4a4947;
+  color: #faf7f0;
+  font-family: "Dancing Script", cursive;
+  font-size: 3rem;
   letter-spacing: 2px;
+}
+
+.hero-contact-info {
+  margin: 1rem;
+}
+.hero-contact-icons {
+  display: flex;
+  justify-content: center;
+}
+.hero-contact-icon {
+  width: 1.5rem;
+  height: 1.5rem;
+  margin: 0.7rem;
+  transition: 0.7s;
+}
+.hero-contact-icon:hover {
+  color: #faf7f0;
+}
+
+/* .hero-line {
+  width: 90%;
+  height: 90%;
+
+  border: 3px solid #4a4947;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.hero-line2 {
+  width: 25%;
+  height: 25%;
+
+  border: 3px solid #fff;
+  position: absolute;
+  top: -5%;
+  left: -7%;
+  transform: translate(-25%, -25%);
+} */
+
+.hero .footer {
+  color: #fff;
+}
+
+@media (max-width: 900px) {
+  .hero-wakru {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+  }
+
+  .hero-line {
+    width: 93%;
+    height: 93%;
+  }
+  .hero-line,
+  .hero-line2 {
+    display: none;
+  }
+
+  .hero1,
+  .hero2,
+  .hero3,
+  .hero4 {
+    width: 100%;
+  }
+  .hero1 {
+    order: 2;
+  }
+  .hero2 {
+    order: 3;
+  }
+  .hero3 {
+    order: 4;
+  }
+  .hero4 {
+    order: 1;
+  }
 }
