--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -5,6 +5,7 @@
   background-color: rgba(255, 255, 255, 0.1);
   backdrop-filter: blur(5px);
   z-index: 999;
+  padding-right: 5rem;
 
   position: fixed;
   top: 0;
