--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -16,3 +16,10 @@
   margin: 1rem;
   cursor: pointer;
 }
+
+@media (max-width: 900px) {
+  .header {
+    justify-content: center;
+    padding: 0;
+  }
+}
