--- a/src/components/hero/Hero.css
+++ b/src/components/hero/Hero.css
@@ -120,11 +120,11 @@
 }
 
 @media (max-width: 900px) {
-  .hero-wakru {
+  /* .hero-wakru {
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
-  }
+  } */
 
   .hero-line {
     width: 93%;
@@ -140,6 +140,7 @@
   .hero3,
   .hero4 {
     width: 100%;
+    height: 25%;
   }
   .hero1 {
     order: 2;
@@ -149,8 +150,15 @@
   }
   .hero3 {
     order: 4;
+    background-color: #4a4947;
+  }
+
+  .hero-contact-container,
+  .hero-contact-icon {
+    color: #fff;
   }
   .hero4 {
     order: 1;
+    background-color: #b17457;
   }
 }
