--- a/src/components/work/Works.css
+++ b/src/components/work/Works.css
@@ -44,6 +44,9 @@
   .workimg-div {
     margin: 0 auto;
   }
+  .works h1 {
+    margin: 5rem 0 0;
+  }
 
   .img-and-sitename {
     padding-bottom: 0;
