--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -4,9 +4,9 @@
   background-color: rgba(255, 255, 255, 0.1);
   z-index: 999;
 
-  position: fixed;
+  /* position: fixed;
   bottom: 0;
-  left: 0;
+  left: 0; */
 }
 .footer p {
   font-size: 1rem;
@@ -19,9 +19,9 @@
 }
 
 @media (max-width: 900px) {
-  .footer {
+  /* .footer {
     position: none;
-  }
+  } */
   .footer p {
     height: 2.5rem;
   }
