--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -2,8 +2,6 @@
   height: 100vh;
   color: #aa988a;
   font-family: "Titillium Web", sans-serif;
-  position: sticky;
-  top: 0;
   position: relative;
 }
 
@@ -49,6 +47,9 @@
   letter-spacing: 1.5px;
   line-height: 1.4rem;
   padding: 0.5rem;
+}
+.text-body h2 {
+  padding-bottom: 5px;
 }
 
 .about .footer {
