--- a/src/components/animation/TopAnimation.css
+++ b/src/components/animation/TopAnimation.css
@@ -2,8 +2,6 @@
 .ani-wrapper {
   width: 100vw;
   height: 100vh;
-  /* overflow: hidden; */
-
   position: relative;
 }
 .top-first {
@@ -16,6 +14,60 @@
   position: absolute;
   top: 0;
   right: 0;
+}
+
+.scroll-icon {
+  position: absolute;
+  bottom: 7%;
+  right: 5%;
+  transform: translate(-5%, -7%);
+  width: 3.5rem;
+  height: 5rem;
+  z-index: 3;
+}
+.scroll-text {
+  color: #fff;
+  -ms-writing-mode: tb-rl;
+  writing-mode: vertical-rl;
+  margin: 0 auto;
+  padding-bottom: 1rem;
+  animation: blink 3s infinite;
+}
+.scroll-bar {
+  height: 100%;
+  width: 2px;
+  margin: 0 auto;
+  background-color: #fff;
+  animation: scroll 3s cubic-bezier(1, 0, 0, 1) infinite;
+}
+@keyframes scroll {
+  0% {
+    transform: scale(1, 0);
+    transform-origin: 0 0;
+  }
+  50% {
+    transform: scale(1, 1);
+    transform-origin: 0 0;
+  }
+  50.1% {
+    transform: scale(1, 1);
+    transform-origin: 0 100%;
+  }
+  100% {
+    transform: scale(1, 0);
+    transform-origin: 0 100%;
+  }
+}
+@keyframes blink {
+  0%,
+  60% {
+    opacity: 1;
+  }
+
+  28%,
+  100% {
+    opacity: 0;
+  }
 }
 
 @keyframes slider {
@@ -36,17 +88,12 @@
   animation: slider 15s forwards;
   opacity: 0;
 }
-/* .top-first{
-  animation-delay: 6s;
-
-} */
 .top-second {
   animation-delay: 3s;
 }
 .top-third {
   animation-delay: 6s;
 }
-
 /* slider animation end */
 
 .img-div {
@@ -73,10 +120,8 @@
   font-size: 8rem;
   font-weight: 900;
   text-align: center;
-  color: rgba(255, 255, 255, 0.3);
-  /* color: rgba(255, 166, 0, 0.7); */
-  color: rgba(0, 0, 0, 0.7);
-  /* color: rgba(51, 51, 51, 0.7); */
+  /* color: rgba(255, 255, 255, 0.3); */
+  color: rgba(0, 0, 0, 0.6);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -85,8 +130,7 @@
   background-clip: text;
   -webkit-background-clip: text;
   filter: drop-shadow(0 3px 5px rgba(0, 0, 0, 0.4));
-  /* text-shadow: 0 0 30px #fff, 0 0 30px #fff; */
-  text-shadow: 0 0 20px #fff;
+  text-shadow: 0 0 30px #fff, 0 0 30px #fff;
 }
 .text-name span {
   display: inline-block;
@@ -103,13 +147,11 @@
 .text-pros1 span {
   display: inline-block;
   animation: showPros1 0.2s forwards ease-out;
-  /* transform: translateY(-30px); */
   opacity: 0;
 }
 .text-pros2 span {
   display: inline-block;
   animation: showPros2 1s forwards ease-out;
-  /* transform: translateY(-30px); */
   opacity: 0;
 }
 
@@ -149,10 +191,29 @@
     opacity: 0;
     transform: scale(2);
   }
-  50% {
-  }
   100% {
     opacity: 1;
     transform: scale(1);
+  }
+}
+
+@media (max-width: 900px) {
+  .ani-wrapper {
+    height: 70vh;
+  }
+  .img {
+    height: 70vh;
+    object-position: 45% 100%;
+  }
+  .texts-on-img {
+    top: 40%;
+    transform: translate(-50%, -40%);
+  }
+  .text-name,
+  .text-posi,
+  .text-pros1,
+  .text-pros2 {
+    height: 100%;
+    font-size: 30px;
   }
 }
