--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,5 +1,6 @@
 .header {
   width: 100vw;
+  height: 60px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -9,9 +10,15 @@
   padding: 0 5rem;
   color: #4a4947;
 
+  transform: translateY(-60px);
+  transition: 0.5s;
+
   position: fixed;
   top: 0;
   left: 0;
+}
+.visivle {
+  transform: translateY(0);
 }
 .header-name {
   font-size: 1.5rem;
@@ -22,10 +29,13 @@
 .header-links {
   display: flex;
 }
+.linktag {
+  cursor: pointer;
+}
 .header-link {
   margin: 1rem;
-  cursor: pointer;
   transition: 0.1s;
+  border-bottom: 3px solid transparent;
 }
 .active {
   border-bottom: 3px solid lightcoral;
@@ -36,7 +46,10 @@
 
 @media (max-width: 900px) {
   .header {
-    justify-content: center;
-    padding: 0;
+    padding: 1rem;
+    justify-content: space-between;
+  }
+  .header-link {
+    margin: 0.5rem;
   }
 }
