--- a/src/components/skills/Skills.css
+++ b/src/components/skills/Skills.css
@@ -6,8 +6,12 @@
 
   margin-right: 0;
   margin-left: auto;
-  padding: 4rem 7rem 0 0;
+  padding-right: 7rem;
   text-align: right;
+  
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .skills h1 {
@@ -34,15 +38,12 @@
 
 @media (max-width: 900px) {
   .skills {
-    padding: 6rem 1rem;
+    padding: 6rem 0;
   }
   .skills-icons {
     justify-content: center;
   }
-}
-
-@media (min-width: 1200px) {
-  .skills {
-    padding-right: 15rem;
+  .skills-icon {
+    margin: 0.7rem;
   }
 }
