--- a/src/components/work/Works.css
+++ b/src/components/work/Works.css
@@ -4,7 +4,7 @@
   background-color: #e6dfcd;
 }
 .works h1 {
-  margin: 6rem 0 1rem;
+  margin: 5rem 0 1rem;
   font-size: 2rem;
   text-shadow: 0 0 10px rgb(255 255 255);
   font-weight: 500;
@@ -65,6 +65,7 @@
   }
 
   .slide {
+    height: 80vh;
     margin: 0;
   }
 }
