--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -1,5 +1,5 @@
 .about {
-  height: 100vh;
+  height: auto;
   color: #aa988a;
   font-family: "Titillium Web", sans-serif;
   position: relative;
@@ -22,8 +22,8 @@
 
 .about-container {
   width: 100%;
-  height: 40%;
   background-color: #fff;
+  padding: 3rem 0;
 }
 .about-texts {
   height: 100%;
@@ -58,14 +58,14 @@
 
 @media (max-width: 900px) {
   .about {
-    height: 100vh;
+    height: auto;
   }
   .about-texts {
     padding: 0 3rem;
   }
   .title-in-about {
     padding: 1rem 4rem;
-    top: 36%;
+    top: 29%;
   }
   .text-body {
     padding-left: 1rem;
