--- a/src/components/work/Works.css
+++ b/src/components/work/Works.css
@@ -1,10 +1,9 @@
 .works {
-  height: 100vh;
   font-family: "Titillium Web", sans-serif;
   background-color: #e6dfcd;
+  padding: 5rem 0;
 }
 .works h1 {
-  margin: 5rem 0 1rem;
   font-size: 2rem;
   text-shadow: 0 0 10px rgb(255 255 255);
   font-weight: 900;
@@ -20,9 +19,8 @@
   flex-direction: column;
 }
 .slide {
-  height: 70vh;
-  overflow-y: scroll;
   display: flex;
+  flex-direction: column;
   margin: 0 3rem;
 }
 
@@ -38,14 +36,14 @@
 }
 
 @media (max-width: 840px) {
+  .works {
+    padding: 5rem 0;
+  }
   .work-container {
     flex-direction: column;
   }
   .workimg-div {
     margin: 0 auto;
-  }
-  .works h1 {
-    margin: 5rem 0 0;
   }
 
   .img-and-sitename {
@@ -65,7 +63,6 @@
   }
 
   .slide {
-    height: 80vh;
     margin: 0;
   }
 }
