--- a/src/components/work/Works.css
+++ b/src/components/work/Works.css
@@ -23,6 +23,9 @@
   flex-direction: column;
   margin: 0 3rem;
 }
+.jump-to-pages {
+  padding-bottom: 2rem;
+}
 
 @media (max-width: 950px) {
   .slide {
@@ -50,7 +53,7 @@
     padding: 0;
   }
   .jump-to-pages {
-    padding-bottom: 1rem;
+    padding-bottom: 2rem;
   }
   .workimg-div {
     width: auto;
