--- a/src/components/skills/Skills.css
+++ b/src/components/skills/Skills.css
@@ -13,10 +13,14 @@
   justify-content: center;
 }
 
-.skills h1 {
-  margin-right: 1.5rem;
+.skills-h1 {
   font-size: 2rem;
   text-shadow: 0 0 10px rgba(255, 255, 255, 1);
+  margin-right: 1.5rem;
+
+  font-weight: 900;
+  letter-spacing: 2px;
+  font-family: "Parisienne", cursive;
 }
 
 .skills-icons {
