--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -5,6 +5,7 @@
   justify-content: space-between;
   align-items: center;
   background-color: rgba(255, 255, 255, 0.1);
+  box-shadow: 0 0 10px #999;
   backdrop-filter: blur(5px);
   z-index: 999;
   padding: 0 5rem;
