--- a/src/components/work/Lang.css
+++ b/src/components/work/Lang.css
@@ -9,7 +9,7 @@
 }
 .lang {
   color: #fff;
-  background-color: #ec5a08;
+  background-color: #9dc3bc;
   border-radius: 10px;
   font-size: 0.8rem;
   letter-spacing: 1px;
