--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -9,7 +9,7 @@
   backdrop-filter: blur(5px);
   z-index: 999;
   padding: 0 7rem;
-  color: #4a4947;
+  color: rgb(121 117 113);
 
   transform: translateY(-60px);
   transition: 0.5s;
@@ -38,11 +38,11 @@
   transition: 0.1s;
   border-bottom: 3px solid transparent;
 }
-.active {
+/* .active {
   border-bottom: 3px solid lightcoral;
-}
+} */
 .header-link:hover {
-  border-bottom: 3px solid lightcoral;
+  border-bottom: 3px solid #9dc3bc;
 }
 
 @media (max-width: 900px) {
