--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -1,16 +1,13 @@
 .contact {
   height: 50vh;
   /* color: #aa988a; */
-  color: rgb(121 117 113);
+  color: #555;
   text-align: center;
+  padding: 0 0 5rem;
 }
 .contact-container {
-  margin: auto 0;
   width: 100%;
   height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
 }
 .cont-h1 {
   font-size: 2rem;
@@ -18,7 +15,7 @@
 
   font-weight: 900;
   letter-spacing: 2px;
-  margin: 1rem;
+  margin: 5rem 0 3rem;
   /* font-family: "Parisienne", cursive; */
   font-family: "Titillium Web", sans-serif;
   transform: translateY(10px);
@@ -41,7 +38,10 @@
 .contact-info a {
   text-decoration: none;
   /* color: #aa988a; */
-  color: rgb(121 117 113);
+  color: #555;
+}
+.contact-icons {
+  margin: 2rem 0 0;
 }
 .contact-icon {
   width: 2rem;
