--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -9,7 +9,7 @@
   backdrop-filter: blur(5px);
   z-index: 999;
   padding: 0 7rem;
-  color: rgb(121 117 113);
+  color: #555;
 
   transform: translateY(-60px);
   transition: 0.5s;
@@ -34,7 +34,7 @@
   cursor: pointer;
 }
 .header-link {
-  margin: 1rem;
+  margin: 1rem 0 1rem 1rem;
   transition: 0.1s;
   border-bottom: 3px solid transparent;
 }
@@ -51,6 +51,6 @@
     justify-content: space-between;
   }
   .header-link {
-    margin: 0.5rem;
+    margin: 0.5rem 0 0.5rem 0.5rem;
   }
 }
