--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -1,6 +1,4 @@
 .contact {
-  height: 50vh;
-  /* color: #aa988a; */
   color: #555;
   text-align: center;
   padding: 0 0 5rem;
@@ -18,7 +16,7 @@
   margin: 5rem 0 3rem;
   /* font-family: "Parisienne", cursive; */
   font-family: "Titillium Web", sans-serif;
-  transform: translateY(10px);
+  transform: translateY(30px);
   opacity: 0;
   transition: 1s;
 }
@@ -31,20 +29,32 @@
 .contact-info {
   text-align: center;
   margin: 0 20%;
+  transform: translateY(30px);
+  opacity: 0;
+  transition: 1.7s;
 }
-.email {
-  margin-top: 1rem;
+.cont-info-show {
+  transform: translateY(0px);
+  opacity: 1;
 }
 .contact-info a {
   text-decoration: none;
-  /* color: #aa988a; */
   color: #555;
 }
-.contact-icons {
-  margin: 2rem 0 0;
-}
+
 .contact-icon {
   width: 2rem;
   height: 2rem;
   margin: 1rem;
+}
+.comment {
+  letter-spacing: 1px;
+  font-size: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.icon-in-comment {
+  width: 1rem;
+  height: 1rem;
 }
