--- a/src/components/skills/Skills.css
+++ b/src/components/skills/Skills.css
@@ -16,14 +16,14 @@
 .skills-h1 {
   font-size: 2rem;
   text-shadow: 0 0 10px rgba(255, 255, 255, 1);
-  margin-right: 1.5rem;
+  /* margin-right: 1.5rem; */
 
   font-weight: 900;
   letter-spacing: 2px;
   /* font-family: "Parisienne", cursive; */
   font-family: "Titillium Web", sans-serif;
 
-  transform: translateX(10px);
+  transform: translateX(30px);
   opacity: 0;
   transition: 1s;
 }
@@ -34,13 +34,13 @@
 }
 
 .skills-icons {
-  max-width: 800px;
+  max-width: 1000px;
   margin-left: auto;
   margin-right: 0;
   display: flex;
   flex-wrap: wrap;
   justify-content: right;
-  transform: translateY(10px);
+  transform: translateY(30px);
   opacity: 0;
   transition: 1s;
 }
@@ -69,6 +69,9 @@
 @media (max-width: 900px) {
   .skills {
     padding: 3rem 0;
+  }
+  .skills-h1 {
+    margin-right: 1rem;
   }
   .skills-icons {
     justify-content: center;
