--- a/src/components/work/Works.css
+++ b/src/components/work/Works.css
@@ -14,7 +14,7 @@
   margin: 5rem;
   /* font-family: "Parisienne", cursive; */
   font-family: "Titillium Web", sans-serif;
-  transform: translateY(10px);
+  transform: translateY(30px);
   opacity: 0;
   transition: 1s;
 }
@@ -86,7 +86,7 @@
   .work {
     padding: 1.5rem 0.5rem;
   }
-  .img-and-sitename {
-    padding: 1rem 0;
+  .sitetitle {
+    margin: 0.5rem 0 2rem;
   }
 }
