--- a/src/components/skills/Skills.css
+++ b/src/components/skills/Skills.css
@@ -68,7 +68,7 @@
 
 @media (max-width: 900px) {
   .skills {
-    padding: 3rem 0;
+    padding: 6rem 0 3rem 0;
   }
   .skills-h1 {
     margin-right: 1rem;
