--- a/src/components/animation/TopAnimation.css
+++ b/src/components/animation/TopAnimation.css
@@ -1,8 +1,9 @@
 /* slider animation */
 .ani-wrapper {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   position: relative;
+  overflow: hidden;
 }
 .top-first {
   display: block;
