--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -29,6 +29,7 @@
 
 .header-links {
   display: flex;
+  align-items: center;
 }
 .linktag {
   cursor: pointer;
@@ -40,6 +41,41 @@
 }
 .header-link:hover {
   border-bottom: 3px solid #9dc3bc;
+}
+
+.lang-toggle {
+  height: 30px;
+  border: 1px solid #555;
+  border-radius: 40px;
+  margin-left: 1rem;
+  padding: 0 3px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 13px;
+  color: #f3f3f3;
+  cursor: pointer;
+}
+.lang-en {
+  padding: 3px;
+  margin-right: 5px;
+  width: 25px;
+  height: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.lang-jp {
+  padding: 3px;
+  width: 25px;
+  height: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.chosen {
+  background-color: #f1ba67;
+  border-radius: 50px;
 }
 
 @media (max-width: 900px) {
